libraries/ckit/regression/valid-programs/a205.c
main (){

  int *p;

  p ++;

  p += 3;
}
